services/firewalls/security/config/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Pingi do firewalla
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT

# Pingi między strefami
-A FORWARD -p icmp --icmp-type echo-request -j ACCEPT
-A FORWARD -p icmp --icmp-type echo-reply -j ACCEPT

# Reguły z tabeli 8
# Syslog do SIEM
-A FORWARD -d 10.2.1.30 -p udp --dport 514 -j ACCEPT  
# Wazuh agent
-A FORWARD -s 10.3.0.0/24 -d 10.2.1.10 -p tcp --dport 8080 -j ACCEPT  
# Kibana UI
-A FORWARD -s 10.0.0.0/8 -d 10.2.1.30 -p tcp --dport 5601 -j ACCEPT  
# Elasticsearch
-A FORWARD -s 10.0.0.0/8 -d 10.2.1.30 -p tcp --dport 9200 -j ACCEPT
# Nessus
-A FORWARD -s 10.2.1.50 -j ACCEPT  
# Nessus odpowiedz zwrotna
-A FORWARD -d 10.2.1.50 -j ACCEPT
# Pozostały ruch
-A FORWARD -d 10.2.1.0/24 -j DROP  

COMMIT
